5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1758_2390.log
== TEST (2019-05-29 09:53:20) 
-- CODE:
from numpy import*
pm = arrey(eval(input("quantidade de presentes")))
fm = arrey(eval(input("quantidade de faltas")))

i = 0 #percorre o vetor
b = 0 #saida
lis = zeros(12, dtype=int)
while(i<size(pm)):
	lis = pm[i]-fm[i] 
	lis[i] = pm[b] 
	b = b +1
	i = i +1
print(lis)
	
   
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:53:37) 
-- CODE:
from numpy import*
pm = array(eval(input("quantidade de presentes")))
fm = array(eval(input("quantidade de faltas")))

i = 0 #percorre o vetor
b = 0 #saida
lis = zeros(12, dtype=int)
while(i<size(pm)):
	lis = pm[i]-fm[i] 
	lis[i] = pm[b] 
	b = b +1
	i = i +1
print(lis)
	
   
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:55:16) 
-- CODE:
from numpy import*
pm = array(eval(input("quantidade de presentes")))
fm = array(eval(input("quantidade de faltas")))

i = 0 #percorre o vetor
b = 0 #saida
lis = zeros(12, dtype=int)
while(i<size(pm)):
	 pm[i]-fm[i] 
	lis[i] = pm[i]-fm[i] 
	b = b +1
	i = i +1
print(lis)
	
   
		
		
-- ERROR:
File "XXXX", line 10
    lis[i] = pm[i]-fm[i] 
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:55:40) 
-- CODE:
from numpy import*
pm = array(eval(input("quantidade de presentes")))
fm = array(eval(input("quantidade de faltas")))

i = 0 #percorre o vetor
b = 0 #saida
lis = zeros(12, dtype=int)
while(i<size(pm)):
	lis[i] = pm[i]-fm[i] 
	b = b +1
	i = i +1
print(lis)
	
   
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:58:56) 
-- CODE:
from numpy import*
pm = array(eval(input("quantidade de presentes")))
fm = array(eval(input("quantidade de faltas")))

i = 0 #percorre o vetor
b = 0 #saida
lis = zeros(12, dtype=int)
while(i<size(pm)):
	lis[i] = pm[i]-fm[i] 
	b = b +1
	i = i +1
print(lis)
	
l = 0
while (l < size(lis)):
	if (lis[l] != max(lis)):
		l = l + 1
	else:
		msg = (l+1)
		l = l + 1
print(msg)
			
   
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:59:26) 
-- CODE:
from numpy import*
pm = array(eval(input("quantidade de presentes")))
fm = array(eval(input("quantidade de faltas")))

i = 0 #percorre o vetor
b = 0 #saida
lis = zeros(12, dtype=int)
while(i<size(pm)):
	lis[i] = pm[i]-fm[i] 
	b = b +1
	i = i +1
	
l = 0
while (l < size(lis)):
	if (lis[l] != max(lis)):
		l = l + 1
	else:
		msg = (l+1)
		l = l + 1
print(msg)
			
   
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:59:48) 
-- CODE:
from numpy import*
pm = array(eval(input("quantidade de presentes")))
fm = array(eval(input("quantidade de faltas")))

i = 0 #percorre o vetor
b = 0 #saida
lis = zeros(12, dtype=int)
while(i<size(pm)):
	lis[i] = pm[i]-fm[i] 
	b = b +1
	i = i +1
	
l = 0
while (l < size(lis)):
	if (lis[l] != max(lis)):
		l = l + 1
	else:
		msg = (l+1)
		l = l + 1
print(msg)
			
   
		
		
-- EXECUTION TIME:
0.340017
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
